--- a/.github/workflows/create-ami.yml
+++ b/.github/workflows/create-ami.yml
@@ -37,6 +37,7 @@ jobs:
           echo "UniqueID: ${{ steps.garoclient-spot.outputs.uniqueid }}"
 
   deploy-to-staging:
+    environment: aws_dev
     name: Deploy an instance with the build only
     needs: get-spot-runner
     runs-on: [self-hosted, prod, "${{ needs.get-spot-runner.outputs.uniqueid }}"]
@@ -48,11 +49,9 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: main
-        RUNNER_SUBNET: '${{ secrets.RUNNER_SUBNET }}'
-        RUNNER_SG: '${{ secrets.RUNNER_SG }}'
+        SUBNETID: '${{ secrets.RUNNER_SUBNET }}'
+        SECURITYG: '${{ secrets.RUNNER_SG }}'
     - run: |
         source ~/.bash_profile && source ~/.bashrc
         cd main/
-        export SUBNETID="$RUNNER_SUBNET" \
-          && export SECURITYG="$RUNNER_SG" \
-          && scripts/create_ami.sh
+        bash scripts/create_ami.sh
