Add more runners

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,10 @@ jobs:
         include:
         - label: test1
           type: spot
-        # - label: test2
-        #   type: spot
-        # - label: test3
-        #   type: ondemand
+        - label: test2
+          type: spot
+        - label: test3
+          type: ondemand
     steps:
       - name: Get Runner
         uses: alphagov/github-actions-runner-orchestration/client@main
@@ -49,30 +49,30 @@ jobs:
         aws sts get-caller-identity
         echo ""
 
-#  use-test2-runner:
-#    runs-on: [self-hosted, linux, spot, test2]
-#    needs: get-runners
-#    defaults:
-#      run:
-#        shell: bash
-#    steps:
-#    - run: |
-#        source ~/.bash_profile
-#        echo "Hello world from test2!"
-#        echo ""
-#        aws sts get-caller-identity
-#        echo ""
-#
-#  use-test3-runner:
-#    runs-on: [self-hosted, linux, ondemand, test3]
-#    needs: get-runners
-#    defaults:
-#      run:
-#        shell: bash
-#    steps:
-#    - run: |
-#        source ~/.bash_profile
-#        echo "Hello world from test3 (ondemand)!"
-#        echo ""
-#        aws sts get-caller-identity
-#        echo ""
+  use-test2-runner:
+    runs-on: [self-hosted, linux, spot, test2]
+    needs: get-runners
+    defaults:
+      run:
+        shell: bash
+    steps:
+    - run: |
+        source ~/.bash_profile
+        echo "Hello world from test2!"
+        echo ""
+        aws sts get-caller-identity
+        echo ""
+
+  use-test3-runner:
+    runs-on: [self-hosted, linux, ondemand, test3]
+    needs: get-runners
+    defaults:
+      run:
+        shell: bash
+    steps:
+    - run: |
+        source ~/.bash_profile
+        echo "Hello world from test3 (ondemand)!"
+        echo ""
+        aws sts get-caller-identity
+        echo ""
