Redact AWS account

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
         source ~/.bash_profile
         echo "Hello world from test1!"
         echo ""
-        aws sts get-caller-identity | redact '${{ secrets.RUNNER_ACID }}'
+        aws sts get-caller-identity | redact "${{ secrets.RUNNER_ACID }}"
         echo ""
 
   use-test2-runner:
@@ -74,5 +74,5 @@ jobs:
         source ~/.bash_profile
         echo "Hello world from test3 (ondemand)!"
         echo ""
-        aws sts get-caller-identity | redact '[[:xdigit:]]{1,999}'
+        aws sts get-caller-identity | redact '[[:xdigit:]]+{4,999}'
         echo ""
