Remove PR for now

--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -9,9 +9,9 @@ on:
       - main
     paths:
       - '**.tf'
-  pull_request:
-    paths:
-      - '**.tf'
+  # pull_request:
+  #   paths:
+  #     - '**.tf'
 
 jobs:
   tfsec:
